--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
    
    
-    <title>GVK's Ecommerce</title>
+    <title>Pixel-Cartel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
